[package]
name = "carrot-acp-thread"
version = "0.1.0"
edition.workspace = true
publish.workspace = true
license-file.workspace = true

[lints]
workspace = true

[lib]
path = "src/acp_thread.rs"
doctest = false

[features]
test-support = ["inazuma/test-support", "carrot-project/test-support", "dep:parking_lot", "dep:image"]

[dependencies]
carrot-action-log.workspace = true
agent-client-protocol.workspace = true
base64.workspace = true
anyhow.workspace = true
carrot-buffer-diff.workspace = true
chrono.workspace = true
inazuma-collections.workspace = true
carrot-multi-buffer.workspace = true
carrot-file-icons.workspace = true
futures.workspace = true
inazuma.workspace = true
itertools.workspace = true
carrot-language.workspace = true
carrot-language-model.workspace = true
log.workspace = true
carrot-markdown.workspace = true
parking_lot = { workspace = true, optional = true }
image = { workspace = true, optional = true }
portable-pty.workspace = true
carrot-project.workspace = true
carrot-prompt-store.workspace = true
serde.workspace = true
serde_json.workspace = true
inazuma-settings-framework.workspace = true
smol.workspace = true
carrot-task.workspace = true
carrot-telemetry.workspace = true
carrot-terminal.workspace = true
inazuma-text.workspace = true
carrot-ui.workspace = true
url.workspace = true
inazuma-util.workspace = true
uuid.workspace = true
carrot-watch.workspace = true
urlencoding.workspace = true

[dev-dependencies]
env_logger.workspace = true
inazuma = { workspace = true, "features" = ["test-support"] }
indoc.workspace = true
parking_lot.workspace = true
carrot-project = { workspace = true, "features" = ["test-support"] }
rand.workspace = true
inazuma-util.workspace = true
inazuma-settings-framework.workspace = true
