[package]
name = "carrot-acp-tools"
version = "0.1.0"
edition.workspace = true
publish.workspace = true
license-file.workspace = true


[lints]
workspace = true

[lib]
path = "src/acp_tools.rs"
doctest = false

[dependencies]
agent-client-protocol.workspace = true
inazuma-collections.workspace = true
inazuma.workspace = true
carrot-language.workspace = true
carrot-markdown.workspace = true
carrot-project.workspace = true
serde.workspace = true
serde_json.workspace = true
inazuma-settings-framework.workspace = true
carrot-theme-settings.workspace = true
carrot-ui.workspace = true
inazuma-util.workspace = true
carrot-workspace.workspace = true
