[package]
name = "carrot-action-log"
version = "0.1.0"
edition.workspace = true
publish.workspace = true
license-file.workspace = true

[lib]
path = "src/action_log.rs"

[lints]
workspace = true

[features]
test-support = []

[dependencies]
anyhow.workspace = true
carrot-buffer-diff.workspace = true
log.workspace = true
inazuma-clock.workspace = true
inazuma-collections.workspace = true
carrot-fs.workspace = true
futures.workspace = true
inazuma.workspace = true
carrot-language.workspace = true
carrot-project.workspace = true
carrot-telemetry.workspace = true
inazuma-text.workspace = true
inazuma-util.workspace = true
carrot-watch.workspace = true


[dev-dependencies]
carrot-buffer-diff = { workspace = true, features = ["test-support"] }
inazuma-collections = { workspace = true, features = ["test-support"] }
inazuma-clock = { workspace = true, features = ["test-support"] }
ctor.workspace = true
inazuma = { workspace = true, features = ["test-support"] }

carrot-language = { workspace = true, features = ["test-support"] }
log.workspace = true
pretty_assertions.workspace = true
carrot-project = { workspace = true, features = ["test-support"] }
rand.workspace = true
serde_json.workspace = true
inazuma-settings-framework = { workspace = true, features = ["test-support"] }
inazuma-text = { workspace = true, features = ["test-support"] }
inazuma-util = { workspace = true, features = ["test-support"] }
carrot-log.workspace = true
