[package]
name = "carrot-actions"
version = "0.1.0"
edition.workspace = true
publish.workspace = true
license-file.workspace = true

[lints]
workspace = true

[dependencies]
inazuma.workspace = true
schemars.workspace = true
serde.workspace = true
inazuma-util.workspace = true
uuid.workspace = true
