[package]
name = "carrot-activity-indicator"
version = "0.1.0"
edition.workspace = true
publish.workspace = true
license-file.workspace = true

[lints]
workspace = true

[lib]
path = "src/activity_indicator.rs"
doctest = false

[dependencies]
anyhow.workspace = true
carrot-auto-update.workspace = true
carrot-editor.workspace = true
carrot-extension-host.workspace = true
carrot-fs.workspace = true
futures.workspace = true
inazuma.workspace = true
carrot-language.workspace = true
carrot-project.workspace = true
carrot-proto.workspace = true
smallvec.workspace = true
carrot-ui.workspace = true
inazuma-util.workspace = true
carrot-workspace.workspace = true

[dev-dependencies]
carrot-editor = { workspace = true, features = ["test-support"] }

