[package]
name = "carrot-agent-servers"
version = "0.1.0"
edition.workspace = true
publish.workspace = true
license-file.workspace = true

[features]
test-support = ["carrot-acp-thread/test-support", "inazuma/test-support", "carrot-project/test-support", "dep:env_logger", "carrot-client/test-support", "dep:inazuma-tokio", "carrot-reqwest-client/test-support"]
e2e = []

[lints]
workspace = true

[lib]
path = "src/agent_servers.rs"
doctest = false

[dependencies]
carrot-acp-tools.workspace = true
carrot-acp-thread.workspace = true
carrot-action-log.workspace = true
agent-client-protocol.workspace = true
anyhow.workspace = true
async-trait.workspace = true
chrono.workspace = true
carrot-client.workspace = true
inazuma-collections.workspace = true
env_logger = { workspace = true, optional = true }
carrot-fs.workspace = true
futures.workspace = true
inazuma.workspace = true
carrot-feature-flags.workspace = true
inazuma-tokio = { workspace = true, optional = true }
carrot-credentials-provider.workspace = true
carrot-google-ai.workspace = true
carrot-http-client.workspace = true
indoc.workspace = true
carrot-language-model.workspace = true
log.workspace = true
carrot-project.workspace = true
carrot-release-channel.workspace = true
carrot-reqwest-client = { workspace = true, optional = true }
serde.workspace = true
serde_json.workspace = true
inazuma-settings-framework.workspace = true
smol.workspace = true
carrot-task.workspace = true
tempfile.workspace = true
thiserror.workspace = true
carrot-ui.workspace = true
carrot-terminal.workspace = true
uuid.workspace = true
inazuma-util.workspace = true
carrot-watch.workspace = true

[target.'cfg(unix)'.dependencies]
libc.workspace = true
nix.workspace = true

[dev-dependencies]
carrot-client = { workspace = true, features = ["test-support"] }
env_logger.workspace = true
carrot-fs.workspace = true

indoc.workspace = true
carrot-acp-thread = { workspace = true, features = ["test-support"] }
inazuma = { workspace = true, features = ["test-support"] }
inazuma-tokio.workspace = true
carrot-reqwest-client = { workspace = true, features = ["test-support"] }
