[package]
name = "carrot-agent-ui"
version = "0.1.0"
edition.workspace = true
publish.workspace = true
license-file.workspace = true

[lints]
workspace = true

[lib]
path = "src/agent_ui.rs"
doctest = false

[features]
test-support = [
    "carrot-assistant-text-thread/test-support",
    "carrot-acp-thread/test-support",
    "carrot-eval-utils",
    "inazuma/test-support",
    "carrot-language/test-support",
    "carrot-reqwest-client",
    "carrot-workspace/test-support",
    "carrot-agent/test-support",
]
unit-eval = []

[dependencies]
carrot-acp-thread.workspace = true
carrot-action-log.workspace = true
agent-client-protocol.workspace = true
carrot-agent.workspace = true
carrot-agent-servers.workspace = true
carrot-agent-settings.workspace = true
carrot-ai-onboarding.workspace = true
anyhow.workspace = true
heapless.workspace = true
carrot-assistant-text-thread.workspace = true
carrot-assistant-slash-command.workspace = true
carrot-assistant-slash-commands.workspace = true
carrot-audio.workspace = true
base64.workspace = true
carrot-buffer-diff.workspace = true
chrono.workspace = true
carrot-client.workspace = true
carrot-cloud-api-types.workspace = true
inazuma-collections.workspace = true
inazuma-component-registry.workspace = true
carrot-command-palette-hooks.workspace = true
carrot-context-server.workspace = true
carrot-db.workspace = true
carrot-editor.workspace = true
carrot-eval-utils = { workspace = true, optional = true }
carrot-extension.workspace = true
carrot-extension-host.workspace = true
carrot-feature-flags.workspace = true
carrot-file-icons.workspace = true
carrot-fs.workspace = true
futures.workspace = true
carrot-git.workspace = true
inazuma-fuzzy.workspace = true
inazuma.workspace = true
inazuma-tokio.workspace = true
carrot-html-to-markdown.workspace = true
carrot-http-client.workspace = true
indoc.workspace = true
itertools.workspace = true
jsonschema.workspace = true
carrot-language.workspace = true
carrot-language-model.workspace = true
carrot-language-models.workspace = true
log.workspace = true
carrot-lsp.workspace = true
carrot-markdown.workspace = true
inazuma-menu.workspace = true
carrot-multi-buffer.workspace = true
carrot-notifications.workspace = true
ordered-float.workspace = true
parking_lot.workspace = true
carrot-paths.workspace = true
inazuma-picker.workspace = true
postage.workspace = true
carrot-project.workspace = true
carrot-prompt-store.workspace = true
carrot-proto.workspace = true
rand.workspace = true
carrot-release-channel.workspace = true
inazuma-rope.workspace = true
carrot-rules-library.workspace = true
schemars.workspace = true
carrot-search.workspace = true
carrot-shell.workspace = true
serde.workspace = true
serde_json.workspace = true
serde_json_lenient.workspace = true
inazuma-settings-framework.workspace = true
smol.workspace = true
carrot-streaming-diff.workspace = true
carrot-task.workspace = true
carrot-telemetry.workspace = true
carrot-terminal.workspace = true
carrot-terminal-view.workspace = true
inazuma-text.workspace = true
carrot-theme.workspace = true
carrot-theme-settings.workspace = true
time.workspace = true
carrot-time-format.workspace = true
carrot-ui.workspace = true
carrot-ui-input.workspace = true
url.workspace = true
inazuma-util.workspace = true
uuid.workspace = true
carrot-watch.workspace = true
carrot-workspace.workspace = true
carrot-actions.workspace = true
image.workspace = true
carrot-reqwest-client = { workspace = true, optional = true }

[dev-dependencies]
carrot-acp-thread = { workspace = true, features = ["test-support"] }
carrot-agent = { workspace = true, features = ["test-support"] }
carrot-assistant-text-thread = { workspace = true, features = ["test-support"] }
carrot-buffer-diff = { workspace = true, features = ["test-support"] }

carrot-db = { workspace = true, features = ["test-support"] }
carrot-editor = { workspace = true, features = ["test-support"] }
carrot-eval-utils.workspace = true
inazuma = { workspace = true, "features" = ["test-support"] }
indoc.workspace = true
carrot-language = { workspace = true, "features" = ["test-support"] }
carrot-languages = { workspace = true, features = ["test-support"] }
carrot-language-model = { workspace = true, "features" = ["test-support"] }
pretty_assertions.workspace = true
carrot-project = { workspace = true, features = ["test-support"] }

semver.workspace = true
carrot-reqwest-client.workspace = true

tree-sitter-md.workspace = true
unindent.workspace = true
