[package]
name = "carrot-ai-onboarding"
version = "0.1.0"
edition.workspace = true
publish.workspace = true
license-file.workspace = true

[lints]
workspace = true

[lib]
path = "src/ai_onboarding.rs"

[features]
default = []

[dependencies]
inazuma-component-registry.workspace = true
carrot-client.workspace = true
carrot-cloud-api-types.workspace = true
inazuma.workspace = true
carrot-language-model.workspace = true
serde.workspace = true
smallvec.workspace = true
carrot-telemetry.workspace = true
carrot-ui.workspace = true
carrot-actions.workspace = true
