[package]
name = "carrot-anthropic"
version = "0.1.0"
edition.workspace = true
publish.workspace = true
license-file.workspace = true

[features]
default = []
schemars = ["dep:schemars"]

[lints]
workspace = true

[lib]
path = "src/anthropic.rs"

[dependencies]
anyhow.workspace = true
chrono.workspace = true
futures.workspace = true
carrot-http-client.workspace = true
schemars = { workspace = true, optional = true }
serde.workspace = true
serde_json.workspace = true
strum.workspace = true
thiserror.workspace = true


