[package]
name = "carrot-askpass"
version = "0.1.0"
edition.workspace = true
publish.workspace = true
license-file.workspace = true

[lints]
workspace = true

[lib]
path = "src/askpass.rs"

[dependencies]
anyhow.workspace = true
futures.workspace = true
inazuma.workspace = true
carrot-net.workspace = true
smol.workspace = true
log.workspace = true
tempfile.workspace = true
inazuma-util.workspace = true
zeroize.workspace = true

[target.'cfg(target_os = "windows")'.dependencies]
windows.workspace = true

[package.metadata.cargo-machete]
ignored = ["log"]
