[package]
name = "carrot-assistant-slash-command"
version = "0.1.0"
edition.workspace = true
publish.workspace = true
license-file.workspace = true

[lints]
workspace = true

[lib]
path = "src/assistant_slash_command.rs"

[dependencies]
anyhow.workspace = true
async-trait.workspace = true
inazuma-collections.workspace = true
derive_more.workspace = true
carrot-extension.workspace = true
futures.workspace = true
inazuma.workspace = true
carrot-language.workspace = true
carrot-language-model.workspace = true
parking_lot.workspace = true
serde.workspace = true
serde_json.workspace = true
carrot-ui.workspace = true
inazuma-util.workspace = true
carrot-workspace.workspace = true

[dev-dependencies]
inazuma = { workspace = true, features = ["test-support"] }
pretty_assertions.workspace = true
carrot-workspace = { workspace = true, features = ["test-support"] }
