[package]
name = "carrot-assistant-slash-commands"
version = "0.1.0"
edition.workspace = true
publish.workspace = true
license-file.workspace = true

[lints]
workspace = true

[lib]
path = "src/assistant_slash_commands.rs"

[dependencies]
anyhow.workspace = true
carrot-assistant-slash-command.workspace = true
chrono.workspace = true
inazuma-collections.workspace = true
carrot-editor.workspace = true
carrot-feature-flags.workspace = true
carrot-fs.workspace = true
futures.workspace = true
inazuma-fuzzy.workspace = true
inazuma.workspace = true
carrot-html-to-markdown.workspace = true
carrot-http-client.workspace = true
carrot-language.workspace = true
carrot-project.workspace = true
carrot-prompt-store.workspace = true
inazuma-rope.workspace = true
serde.workspace = true
serde_json.workspace = true
smol.workspace = true
inazuma-text.workspace = true
carrot-ui.workspace = true
inazuma-util.workspace = true
carrot-workspace.workspace = true
carrot-worktree.workspace = true

[dev-dependencies]
carrot-fs = { workspace = true, features = ["test-support"] }
inazuma = { workspace = true, features = ["test-support"] }
carrot-multi-buffer = { workspace = true, features = ["test-support"] }
pretty_assertions.workspace = true
carrot-project = { workspace = true, features = ["test-support"] }
inazuma-settings-framework = { workspace = true, features = ["test-support"] }
carrot-log.workspace = true
