[package]
name = "carrot-assistant-text-thread"
version = "0.1.0"
edition.workspace = true
publish.workspace = true
license-file.workspace = true

[lints]
workspace = true

[lib]
path = "src/assistant_text_thread.rs"

[features]
test-support = []

[dependencies]
carrot-agent-settings.workspace = true
anyhow.workspace = true
carrot-assistant-slash-command.workspace = true
chrono.workspace = true
carrot-client.workspace = true
inazuma-clock.workspace = true
inazuma-collections.workspace = true
carrot-context-server.workspace = true
carrot-fs.workspace = true
futures.workspace = true
inazuma-fuzzy.workspace = true
inazuma.workspace = true
itertools.workspace = true
carrot-language.workspace = true
carrot-language-model.workspace = true
log.workspace = true
carrot-open-ai.workspace = true
parking_lot.workspace = true
carrot-paths.workspace = true
carrot-project.workspace = true
carrot-prompt-store.workspace = true
carrot-proto.workspace = true
regex.workspace = true
carrot-rpc.workspace = true
serde.workspace = true
serde_json.workspace = true
inazuma-settings-framework.workspace = true
smallvec.workspace = true
smol.workspace = true
carrot-telemetry.workspace = true
inazuma-text.workspace = true
carrot-ui.workspace = true
inazuma-util.workspace = true
uuid.workspace = true
carrot-workspace.workspace = true
carrot-env-vars.workspace = true

[dev-dependencies]
carrot-assistant-slash-commands.workspace = true

carrot-language-model = { workspace = true, features = ["test-support"] }
pretty_assertions.workspace = true
rand.workspace = true
unindent.workspace = true
carrot-workspace = { workspace = true, features = ["test-support"] }
