[package]
name = "carrot-auto-update-ui"
version = "0.1.0"
edition.workspace = true
publish.workspace = true
license-file.workspace = true

[lints]
workspace = true

[lib]
path = "src/auto_update_ui.rs"

[dependencies]
anyhow.workspace = true
carrot-auto-update.workspace = true
carrot-client.workspace = true
carrot-editor.workspace = true
inazuma.workspace = true
carrot-markdown-preview.workspace = true
carrot-release-channel.workspace = true
semver.workspace = true
serde.workspace = true
serde_json.workspace = true
smol.workspace = true
carrot-ui.workspace = true
inazuma-util.workspace = true
carrot-workspace.workspace = true
