[package]
name = "carrot-auto-update"
version = "0.1.0"
edition.workspace = true
publish.workspace = true
license-file.workspace = true

[lints]
workspace = true

[lib]
path = "src/auto_update.rs"
doctest = false

[dependencies]
anyhow.workspace = true
carrot-client.workspace = true
carrot-db.workspace = true
futures-lite.workspace = true
inazuma.workspace = true
carrot-http-client.workspace = true
log.workspace = true
carrot-paths.workspace = true
carrot-release-channel.workspace = true
semver.workspace = true
serde.workspace = true
serde_json.workspace = true
inazuma-settings-content.workspace = true
inazuma-settings-framework.workspace = true
smol.workspace = true
tempfile.workspace = true
inazuma-util.workspace = true
carrot-workspace.workspace = true

[target.'cfg(not(target_os = "windows"))'.dependencies]
which.workspace = true

[dev-dependencies]
ctor.workspace = true
inazuma-clock= { workspace = true, "features" = ["test-support"] }
futures.workspace = true
inazuma = { workspace = true, "features" = ["test-support"] }
parking_lot.workspace = true
carrot-log.workspace = true
