[package]
name = "carrot-aws-http-client"
version = "0.1.0"
edition.workspace = true
publish.workspace = true
license-file.workspace = true

[lints]
workspace = true

[lib]
path = "src/aws_http_client.rs"

[features]
default = []

[dependencies]
aws-smithy-runtime-api.workspace = true
aws-smithy-types.workspace = true
carrot-http-client.workspace = true
