[package]
name = "carrot-breadcrumbs"
version = "0.1.0"
edition.workspace = true
publish.workspace = true
license-file.workspace = true

[lints]
workspace = true

[lib]
path = "src/breadcrumbs.rs"
doctest = false

[dependencies]
inazuma.workspace = true
inazuma-settings-framework.workspace = true
carrot-ui.workspace = true
carrot-workspace.workspace = true

[dev-dependencies]
inazuma = { workspace = true, features = ["test-support"] }
carrot-workspace = { workspace = true, features = ["test-support"] }
