[package]
name = "carrot-channel"
version = "0.1.0"
edition.workspace = true
publish.workspace = true
license-file.workspace = true

[lints]
workspace = true

[lib]
path = "src/channel.rs"
doctest = false

[features]
test-support = ["inazuma-collections/test-support", "inazuma/test-support", "carrot-rpc/test-support"]

[dependencies]
anyhow.workspace = true
carrot-client.workspace = true
inazuma-clock.workspace = true
inazuma-collections.workspace = true
futures.workspace = true
inazuma.workspace = true
carrot-language.workspace = true
log.workspace = true
postage.workspace = true
carrot-release-channel.workspace = true
carrot-rpc.workspace = true
inazuma-settings-framework.workspace = true
inazuma-text.workspace = true
time.workspace = true
inazuma-util.workspace = true

[dev-dependencies]
inazuma-collections = { workspace = true, features = ["test-support"] }
inazuma = { workspace = true, features = ["test-support"] }
carrot-rpc = { workspace = true, features = ["test-support"] }
carrot-client = { workspace = true, features = ["test-support"] }
semver.workspace = true
inazuma-settings-framework = { workspace = true, features = ["test-support"] }
inazuma-util = { workspace = true, features = ["test-support"] }
carrot-http-client = { workspace = true, features = ["test-support"] }
