[package]
name = "carrot-cli-agents"
version = "0.1.0"
edition.workspace = true
publish.workspace = true
license-file.workspace = true

[lints]
workspace = true

[lib]
path = "src/cli_agents.rs"
doctest = false

[dependencies]
anyhow.workspace = true
bitflags.workspace = true
dirs.workspace = true
inazuma.workspace = true
log.workspace = true
carrot-terminal.workspace = true
rust-embed.workspace = true
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
sysinfo.workspace = true
thiserror.workspace = true

[dev-dependencies]
