[package]
name = "carrot-cloud-api-client"
version = "0.1.0"
edition.workspace = true
publish.workspace = true
license-file.workspace = true

[lints]
workspace = true

[lib]
path = "src/cloud_api_client.rs"

[dependencies]
anyhow.workspace = true
carrot-cloud-api-types.workspace = true
futures.workspace = true
inazuma.workspace = true
inazuma-tokio.workspace = true
carrot-http-client.workspace = true
parking_lot.workspace = true
serde_json.workspace = true
thiserror.workspace = true
yawc.workspace = true
