[package]
name = "carrot-cloud-api-types"
version = "0.1.0"
edition.workspace = true
publish.workspace = true
license-file.workspace = true

[lints]
workspace = true

[lib]
path = "src/cloud_api_types.rs"

[dependencies]
anyhow.workspace = true
chrono.workspace = true
ciborium.workspace = true
carrot-cloud-llm-client.workspace = true
serde.workspace = true
serde_json.workspace = true
strum.workspace = true

[dev-dependencies]
pretty_assertions.workspace = true
serde_json.workspace = true
